fix: add consistent component labels to prevent network policy downtime
- Add 'component: flask-react-app-preview' label to all preview deployments
- Update network policy to use component label instead of commit-specific app label
- Prevents permanent preview downtime when new deployments are made
- Maintains security by targeting only flask-react-app-preview pods

--- a/lib/kube/core/network-policy.yaml
+++ b/lib/kube/core/network-policy.yaml
@@ -70,10 +70,10 @@ metadata:
   namespace: $KUBE_NS
 spec:
   podSelector:
-    matchExpressions:
-      - key: app
-        operator: In
-        values: [$KUBE_APP, "flask-react-app-preview"]
+    matchLabels:
+      # Use component label for consistent matching across all preview deployments
+      # This prevents downtime when commit hashes change between deployments
+      component: flask-react-app-preview
   policyTypes:
     - Ingress
   ingress:
