--- a/lib/kube/core/limit-range.yaml
+++ b/lib/kube/core/limit-range.yaml
@@ -1,6 +1,6 @@
 # Default resource limits for containers and pods
-# Aligned with IaC team's standardized resource specifications
-# All containers: 250m/500m CPU, varying memory based on container type
+# Synced with resource quota based on actual usage analysis
+# Supports current usage: ~400Mi per app pod, ~244Mi per temporal pod
 apiVersion: v1
 kind: LimitRange
 metadata:
@@ -8,30 +8,30 @@ metadata:
   namespace: $KUBE_NS
 spec:
   limits:
-    # Container resource limits (matching IaC specifications)
+    # Container resource limits (based on actual usage patterns)
     - max:
-        cpu: "1"        # Max 1 CPU per container (2x IaC limit for flexibility)
-        memory: 1Gi     # Max 1GB per container (above highest IaC limit of 800Mi)
+        cpu: "2"        # Max 2 CPU per container (headroom for temporal containers)
+        memory: 2Gi     # Max 2GB per container (well above current 400Mi usage)
       min:
-        cpu: 50m        # Min below IaC request of 250m
-        memory: 50Mi    # Min below IaC request of 100Mi
+        cpu: 50m        # Min below current usage
+        memory: 50Mi    # Min below current usage
       default:
-        cpu: 500m       # Match IaC CPU limit
-        memory: 400Mi   # Match IaC standard memory limit
+        cpu: 500m       # Default for new containers
+        memory: 400Mi   # Matches current app pod usage
       defaultRequest:
-        cpu: 250m       # Match IaC CPU request
-        memory: 200Mi   # Match IaC standard memory request
+        cpu: 250m       # Conservative request
+        memory: 200Mi   # Conservative request
       type: Container
 
-    # Pod resource limits (sum of all containers in pod)
+    # Pod resource limits (accommodate multiple containers per pod)
     - max:
-        cpu: "2"        # Max 2 CPUs per pod (temporal pod has 4 containers)
-        memory: 2Gi     # Max 2GB per pod (temporal pod total)
+        cpu: "4"        # Max 4 CPUs per pod (temporal pods have multiple containers)
+        memory: 4Gi     # Max 4GB per pod (accommodate temporal + app containers)
       type: Pod
 
-    # Storage limits
+    # Storage limits (generous for development)
     - max:
-        storage: 20Gi   # Max 20GB per volume (generous for logs/temp)
+        storage: 50Gi   # Increased from 20Gi for development needs
       min:
         storage: 500Mi  # Min 500MB
       type: PersistentVolumeClaim
