--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     version: $GITHUB_SHA
   annotations:
     secrets.doppler.com/reload: 'true'
+    checkov.io/skip1: CKV_K8S_35=App uses third party containers
 spec:
   replicas: 1
   strategy:
@@ -248,3 +249,4 @@ spec:
           emptyDir: {}
         - name: temporal-ui-config
           emptyDir: {}
+
