--- a/lib/kube/preview/deployment.yaml
+++ b/lib/kube/preview/deployment.yaml
@@ -27,13 +27,14 @@ spec:
       labels:
         app: $KUBE_APP
     spec:
+      automountServiceAccountToken: false
       priorityClassName: $KUBE_APP-$KUBE_DEPLOY_ID-priority
-      # Security: Run all containers as non-root user 999 to prevent privilege escalation
+      # Security: Run all containers as non-root user 10001 to prevent privilege escalation
       securityContext:
         runAsNonRoot: true
-        runAsUser: 999
-        runAsGroup: 999
-        fsGroup: 999
+        runAsUser: 10001
+        runAsGroup: 10001
+        fsGroup: 10001
         # Security: Enable kernel-level syscall filtering to reduce attack surface
         seccompProfile:
           type: RuntimeDefault
@@ -62,9 +63,11 @@ spec:
                 - ALL
           resources:
             requests:
-             memory: '400Mi'        
+              cpu: 250m
+              memory: '400Mi'        
             limits:
-             memory: '800Mi' 
+              cpu: 500m
+              memory: '800Mi' 
           ports:
             - containerPort: 8080
           env:
