--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,7 +165,7 @@ jobs:
           export KUBE_DEPLOYMENT_IMAGE=flask-react-app:${{ steps.extract_branch.outputs.branch_hash }}@sha256:123
           for file in iac_changed_files/lib/kube/{preview,production,shared}/*.yaml; do
             tmpfile=$(mktemp)
-            envsubst < "$file" > "$tmpfile" && mv "$tmpfile" "$file"
+            envsubst < "$file" >> "$tmpfile" && mv "$tmpfile" "$file"
           done
 
       - name: Run Trivy scan on IaC
