--- a/lib/kube/production/deployment.yaml
+++ b/lib/kube/production/deployment.yaml
@@ -39,16 +39,9 @@ spec:
                       - platform-cluster-01-production-pool
       imagePullSecrets:
         - name: regcred
-      resources:
-        requests:
-          cpu: 250m
-          memory: '400Mi'
-        limits:
-          cpu: 500m
-          memory: '800Mi'
       containers:
         - name: $KUBE_APP
-          image: "$KUBE_DEPLOYMENT_IMAGE
+          image: $KUBE_DEPLOYMENT_IMAGE
           imagePullPolicy: Always
           # Security: Block privilege escalation, make filesystem read-only, drop all capabilities
           securityContext:
