--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -164,6 +164,7 @@ jobs:
         run: | 
           export KUBE_DEPLOYMENT_IMAGE=flask-react-app:${{ steps.extract_branch.outputs.branch_hash }}@sha256:123
           for file in iac_changed_files/lib/kube/{preview,production,shared}/*.yaml; do
+            [ -e "$file" ] || continue
             tmpfile=$(mktemp)
             envsubst < "$file" >> "$tmpfile" && mv "$tmpfile" "$file"
           done
