--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     version: $GITHUB_SHA
   annotations:
     secrets.doppler.com/reload: 'true'
+    checkov.io/skip1: CKV_K8S_35=App uses third party containers
 spec:
   replicas: 1
   strategy:
@@ -223,9 +224,9 @@ spec:
               command: ["true"]
             initialDelaySeconds: 0
             periodSeconds: 10
-          # envFrom:
-          #   - secretRef:
-          #       name: $DOPPLER_MANAGED_SECRET_NAME
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
