--- a/lib/kube/production/temporal-deployment.yaml
+++ b/lib/kube/production/temporal-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     version: $GITHUB_SHA
   annotations:
     secrets.doppler.com/reload: 'true'
+    checkov.io/skip1: CKV_K8S_35=App uses third party containers
 spec:
   replicas: 1
   strategy:
@@ -99,9 +100,9 @@ spec:
           env:
             - name: USER
               value: "temporal"
-          # envFrom:
-          #   - secretRef:
-          #       name: $DOPPLER_MANAGED_SECRET_NAME
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
@@ -126,9 +127,9 @@ spec:
             capabilities:
               drop:
                 - ALL
-          # envFrom:
-          #   - secretRef:
-          #       name: $DOPPLER_MANAGED_SECRET_NAME
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
@@ -165,9 +166,9 @@ spec:
                 - ALL
           ports:
             - containerPort: 8080
-          # envFrom:
-          #   - secretRef:
-          #       name: $DOPPLER_MANAGED_SECRET_NAME
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
@@ -214,9 +215,9 @@ spec:
               drop:
                 - ALL
           command: ['pipenv', 'run', 'python', 'temporal_server.py']
-          # envFrom:
-          #   - secretRef:
-          #       name: $DOPPLER_MANAGED_SECRET_NAME
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
