--- a/lib/kube/preview/deployment.yaml
+++ b/lib/kube/preview/deployment.yaml
@@ -73,9 +73,10 @@ spec:
           env:
             - name: WEB_APP_HOST
               value: $KUBE_INGRESS_HOSTNAME
-          envFrom:
-            - secretRef:
-                name: $DOPPLER_MANAGED_SECRET_NAME
+          # envFrom:
+          #   - secretRef:
+          #       name: $DOPPLER_MANAGED_SECRET_NAME
+
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
@@ -84,6 +85,8 @@ spec:
               mountPath: /opt/app/logs
             - name: system-tmp
               mountPath: /tmp
+            - name: secret-ref
+              mountPath: /opt/app
           startupProbe:
             httpGet:
               path: /
@@ -101,6 +104,9 @@ spec:
               port: 8080
             initialDelaySeconds: 30
       volumes:
+        - name: secret-ref
+          secret:
+            secretName: $DOPPLER_MANAGED_SECRET_NAME
         - name: tmp
           emptyDir: {}
         - name: logs
