--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,9 +203,9 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           body-path: checkov_result/results_github_failed_only.md
 
-      # - name: Build Docker image for scanning
-      #   run: |
-      #     docker build -t flask-react-app:${{ steps.extract_branch.outputs.branch_hash }} .
+      - name: Build Docker image for scanning
+        run: |
+          docker build -t flask-react-app:${{ steps.extract_branch.outputs.branch_hash }} .
 
       - name: Run Trivy scan on docker images
         id: trivy_docker
@@ -222,16 +222,16 @@ jobs:
           trivyignores: ".trivyignore"
           exit-code: 1
           
-      # - name: Comment PR with audit results
-      #   uses: peter-evans/create-or-update-comment@v4
-      #   if: steps.trivy_docker.outcome == 'failure'
-      #   with:
-      #     token: ${{ secrets.TRIVY_SCAN_TOKEN }}
-      #     issue-number: ${{ github.event.pull_request.number }}
-      #     body-path: trivy-docker-report.md
+      - name: Comment PR with audit results
+        uses: peter-evans/create-or-update-comment@v4
+        if: steps.trivy_docker.outcome == 'failure'
+        with:
+          token: ${{ secrets.TRIVY_SCAN_TOKEN }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body-path: trivy-docker-report.md
       
       - name: Fail job if Trivy found issues
-        if: steps.checkov.outcome == 'failure'
+        if: steps.trivy.outcome == 'failure' || steps.trivy_docker.outcome == 'failure' || steps.checkov.outcome == 'failure'
         run: |
           echo "❌ Trivy found vulnerabilities — failing the job."
           exit 1
