--- a/lib/kube/shared/cronjob.yaml
+++ b/lib/kube/shared/cronjob.yaml
@@ -7,6 +7,8 @@ metadata:
   labels:
     app: $KUBE_APP-cronjob
     version: $GITHUB_SHA
+  annotations:
+    checkov.io/skip1: CKV_K8S_35=App uses third party containers
 spec:
   schedule: "10 * * * *"
   concurrencyPolicy: "Replace"
