--- a/lib/kube/core/network-policy.yaml
+++ b/lib/kube/core/network-policy.yaml
@@ -73,7 +73,7 @@ spec:
     matchLabels:
       # Use component label for consistent matching across all preview deployments
       # This prevents downtime when commit hashes change between deployments
-      component: flask-react-app-preview
+      app: $KUBE_APP
   policyTypes:
     - Ingress
   ingress:
@@ -137,5 +137,4 @@ spec:
           port: 5432   # PostgreSQL
         - protocol: TCP
           port: 27017  # MongoDB
-
 
