--- a/.github/workflows/clean.yml
+++ b/.github/workflows/clean.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   clean:
-    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@9ebb0c8894f693c412243968f73cb1ae3910cecf
+    uses: jalantechnologies/github-ci/.github/workflows/clean.yml@v3.3.1
     concurrency:
       group: ci-preview-${{ github.event.pull_request.head.ref }}
       cancel-in-progress: true
