--- a/lib/kube/production/temporal-deployment.yaml
+++ b/lib/kube/production/temporal-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     version: $GITHUB_SHA
   annotations:
     secrets.doppler.com/reload: 'true'
+    checkov.io/skip1: CKV_K8S_35=Third-party Temporal container uses simplified probes
 spec:
   replicas: 1
   strategy:
@@ -83,21 +84,6 @@ spec:
             capabilities:
               drop:
                 - ALL
-          command:
-            - /bin/sh
-            - -c
-          args:
-            - |
-              set -eu
-              if [ -d /var/run/doppler-secrets ]; then
-                for secret_file in /var/run/doppler-secrets/*; do
-                  [ -f "${secret_file}" ] || continue
-                  key="$(basename "${secret_file}")"
-                  value="$(cat "${secret_file}")"
-                  export "${key}"="${value}"
-                done
-              fi
-              exec /etc/temporal/entrypoint.sh autosetup
           ports:
             - containerPort: 7233
           livenessProbe: 
@@ -114,13 +100,14 @@ spec:
           env:
             - name: USER
               value: "temporal"
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
             - name: temporal-config
               mountPath: /etc/temporal/config
-            - name: doppler-secrets
-              mountPath: /var/run/doppler-secrets
           resources:
             requests:
               cpu: 50m
@@ -140,26 +127,12 @@ spec:
             capabilities:
               drop:
                 - ALL
-          command:
-            - /bin/sh
-            - -c
-          args:
-            - |
-              set -eu
-              if [ -d /var/run/doppler-secrets ]; then
-                for secret_file in /var/run/doppler-secrets/*; do
-                  [ -f "${secret_file}" ] || continue
-                  key="$(basename "${secret_file}")"
-                  value="$(cat "${secret_file}")"
-                  export "${key}"="${value}"
-                done
-              fi
-              exec tini -- sleep infinity
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
-            - name: doppler-secrets
-              mountPath: /var/run/doppler-secrets
           stdin: true
           tty: true
           livenessProbe: 
@@ -191,30 +164,16 @@ spec:
             capabilities:
               drop:
                 - ALL
-          command:
-            - /bin/sh
-            - -c
-          args:
-            - |
-              set -eu
-              if [ -d /var/run/doppler-secrets ]; then
-                for secret_file in /var/run/doppler-secrets/*; do
-                  [ -f "${secret_file}" ] || continue
-                  key="$(basename "${secret_file}")"
-                  value="$(cat "${secret_file}")"
-                  export "${key}"="${value}"
-                done
-              fi
-              exec ./start-ui-server.sh
           ports:
             - containerPort: 8080
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
             - name: temporal-ui-config
               mountPath: /home/ui-server/config
-            - name: doppler-secrets
-              mountPath: /var/run/doppler-secrets
           resources:
             requests:
               cpu: 50m
@@ -255,12 +214,7 @@ spec:
             capabilities:
               drop:
                 - ALL
-          command:
-            - /opt/app/scripts/export_doppler_env.sh
-            - pipenv
-            - run
-            - python
-            - temporal_server.py
+          command: ['pipenv', 'run', 'python', 'temporal_server.py']
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
@@ -298,4 +252,3 @@ spec:
         - name: doppler-secrets
           secret:
             secretName: $DOPPLER_MANAGED_SECRET_NAME
-
