--- a/lib/kube/preview/temporal-deployment.yaml
+++ b/lib/kube/preview/temporal-deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     version: $GITHUB_SHA
   annotations:
     secrets.doppler.com/reload: 'true'
+    checkov.io/skip1: CKV_K8S_35=Third-party Temporal container uses simplified probes
 spec:
   replicas: 1
   strategy:
@@ -82,21 +83,6 @@ spec:
             capabilities:
               drop:
                 - ALL
-          command:
-            - /bin/sh
-            - -c
-          args:
-            - |
-              set -eu
-              if [ -d /var/run/doppler-secrets ]; then
-                for secret_file in /var/run/doppler-secrets/*; do
-                  [ -f "${secret_file}" ] || continue
-                  key="$(basename "${secret_file}")"
-                  value="$(cat "${secret_file}")"
-                  export "${key}"="${value}"
-                done
-              fi
-              exec /etc/temporal/entrypoint.sh autosetup
           livenessProbe: 
             exec:
               command: ["true"]
@@ -113,13 +99,14 @@ spec:
           env:
             - name: USER
               value: "temporal"
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
             - name: temporal-config
               mountPath: /etc/temporal/config
-            - name: doppler-secrets
-              mountPath: /var/run/doppler-secrets
           resources:
             requests:
               cpu: 50m
@@ -139,21 +126,6 @@ spec:
             capabilities:
               drop:
                 - ALL
-          command:
-            - /bin/sh
-            - -c
-          args:
-            - |
-              set -eu
-              if [ -d /var/run/doppler-secrets ]; then
-                for secret_file in /var/run/doppler-secrets/*; do
-                  [ -f "${secret_file}" ] || continue
-                  key="$(basename "${secret_file}")"
-                  value="$(cat "${secret_file}")"
-                  export "${key}"="${value}"
-                done
-              fi
-              exec tini -- sleep infinity
           livenessProbe:
             exec:
               command: ["true"]
@@ -164,11 +136,12 @@ spec:
               command: ["true"]
             initialDelaySeconds: 0
             periodSeconds: 10
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
-            - name: doppler-secrets
-              mountPath: /var/run/doppler-secrets
           stdin: true
           tty: true
           resources:
@@ -190,30 +163,16 @@ spec:
             capabilities:
               drop:
                 - ALL
-          command:
-            - /bin/sh
-            - -c
-          args:
-            - |
-              set -eu
-              if [ -d /var/run/doppler-secrets ]; then
-                for secret_file in /var/run/doppler-secrets/*; do
-                  [ -f "${secret_file}" ] || continue
-                  key="$(basename "${secret_file}")"
-                  value="$(cat "${secret_file}")"
-                  export "${key}"="${value}"
-                done
-              fi
-              exec ./start-ui-server.sh
           ports:
             - containerPort: 8080
+          envFrom:
+            - secretRef:
+                name: $DOPPLER_MANAGED_SECRET_NAME
           volumeMounts:
             - name: tmp
               mountPath: /tmp
             - name: temporal-ui-config
               mountPath: /home/ui-server/config
-            - name: doppler-secrets
-              mountPath: /var/run/doppler-secrets
           resources:
             requests:
               cpu: 50m
@@ -254,12 +213,7 @@ spec:
             capabilities:
               drop:
                 - ALL
-          command:
-            - /opt/app/scripts/export_doppler_env.sh
-            - pipenv
-            - run
-            - python
-            - temporal_server.py
+          command: ['pipenv', 'run', 'python', 'temporal_server.py']
           livenessProbe:
             exec:
               command: ["true"]
@@ -270,6 +224,7 @@ spec:
               command: ["true"]
             initialDelaySeconds: 0
             periodSeconds: 10
+          
           volumeMounts:
             # Security: Use temporary volumes for writable directories since root filesystem is read-only
             - name: tmp
@@ -279,7 +234,7 @@ spec:
             - name: doppler-secrets
               mountPath: /opt/app/secrets
           resources:
-            requests:                                                                                                                                                                                                                                                                                                 
+            requests:
               cpu: 50m
               memory: '150Mi'
             limits:
@@ -297,4 +252,3 @@ spec:
         - name: doppler-secrets
           secret:
             secretName: $DOPPLER_MANAGED_SECRET_NAME
-
